<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.company.financemanager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_transactionFragment"
            app:destination="@id/navigation_transaction"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.company.financemanager.ui.transaction.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction">
        <action
            android:id="@+id/action_transactionFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.company.financemanager.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />
</navigation>