<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:background="@color/bgGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00FFFFFF"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/text_dashboard_welcome"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="28dp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/dashboard_welcome"
                            android:textAlignment="textStart"
                            android:textColor="@color/txMain"
                            android:textSize="20sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/btn_notif"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="29dp"
                            android:layout_marginEnd="36dp"
                            android:background="@drawable/rectangle_bg_notification"
                            android:contentDescription="@string/notif"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_notification"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="TouchTargetSizeCheck" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="41dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:id="@+id/linearLayout7"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:orientation="vertical"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:id="@+id/textView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins"
                                    android:text="@string/dashboard_balance"
                                    android:textColor="@color/txMain"
                                    android:textSize="18sp" />

                                <TextView
                                    android:id="@+id/balance_amount"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_medium"
                                    android:text="Rp 200,000"
                                    android:textColor="@color/purple"
                                    android:textSize="24sp" />
                            </LinearLayout>

                            <FrameLayout
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:background="@drawable/rectangle_line_divider"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
                                app:layout_constraintStart_toEndOf="@+id/linearLayout7"
                                app:layout_constraintTop_toTopOf="parent">

                            </FrameLayout>

                            <LinearLayout
                                android:id="@+id/linearLayout6"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:orientation="vertical"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins"
                                    android:text="@string/dashboard_expense"
                                    android:textColor="@color/txMain"
                                    android:textSize="18sp" />

                                <TextView
                                    android:id="@+id/expense_amount"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_medium"
                                    android:text="-Rp 40,000"
                                    android:textColor="@color/red"
                                    android:textSize="24sp" />
                            </LinearLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins"
                    android:text="Last 30 Days +12%"
                    android:textColor="@color/txMain"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/chart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/tr_history"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Latest Transactions"
                        android:textColor="@color/txMain"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/seeAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="See All"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/purple" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tr_history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                    tools:itemCount="5"
                    tools:listitem="@layout/singlerow" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>